// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Toggle can be checked 1`] = `
.c2 {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 500;
  text-align: center;
  color: #555;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  position: relative;
  height: 1.375rem;
  width: 2rem;
  margin-bottom: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1:before {
  position: absolute;
  top: 50%;
  content: '';
  border-radius: 1000px;
  background-color: #D3D3D3;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  -webkit-transition: background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms, opacity 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms, opacity 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  height: 0.75rem;
  width: 2rem;
  background-color: #784c82;
  opacity: 0.5;
}

.c1:after {
  display: block;
  position: absolute;
  box-sizing: border-box;
  content: '';
  -webkit-transition: -webkit-transform 280ms cubic-bezier(0.4,0,0.2,1) 0ms, background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: transform 280ms cubic-bezier(0.4,0,0.2,1) 0ms, background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: transform 280ms cubic-bezier(0.4,0,0.2,1) 0ms, background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  top: 50%;
  width: 1.125rem;
  height: 1.125rem;
  border-radius: 1000px;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  -webkit-transform: translate( calc(2rem - 1.125rem), -50% );
  -ms-transform: translate( calc(2rem - 1.125rem), -50% );
  transform: translate( calc(2rem - 1.125rem), -50% );
  background-color: #784c82;
}

<label
  className="anchor-toggle c0"
  height="1.375rem"
>
  <span
    checked={true}
    className="c1"
    height="1.375rem"
  />
  <input
    checked={true}
    className="c2"
    type="checkbox"
  />
  ON
</label>
`;

exports[`Component: Toggle should be defined 1`] = `
.c2 {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 500;
  text-align: center;
  color: #555;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  position: relative;
  height: 1.375rem;
  width: 2rem;
  margin-bottom: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1:before {
  position: absolute;
  top: 50%;
  content: '';
  border-radius: 1000px;
  background-color: #D3D3D3;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  -webkit-transition: background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms, opacity 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms, opacity 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  height: 0.75rem;
  width: 2rem;
  background-color: #D3D3D3;
}

.c1:after {
  display: block;
  position: absolute;
  box-sizing: border-box;
  content: '';
  -webkit-transition: -webkit-transform 280ms cubic-bezier(0.4,0,0.2,1) 0ms, background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: transform 280ms cubic-bezier(0.4,0,0.2,1) 0ms, background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: transform 280ms cubic-bezier(0.4,0,0.2,1) 0ms, background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  top: 50%;
  width: 1.125rem;
  height: 1.125rem;
  border-radius: 1000px;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  -webkit-transform: translate( 0, -50% );
  -ms-transform: translate( 0, -50% );
  transform: translate( 0, -50% );
  background-color: #808080;
}

<label
  className="anchor-toggle c0"
  height="1.375rem"
>
  <span
    className="c1"
    height="1.375rem"
  />
  <input
    className="c2"
    type="checkbox"
  />
  OFF
</label>
`;

exports[`Component: Toggle should be disableable 1`] = `
.c2 {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 500;
  text-align: center;
  color: #D3D3D3;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  position: relative;
  height: 1.375rem;
  width: 2rem;
  margin-bottom: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1:before {
  position: absolute;
  top: 50%;
  content: '';
  border-radius: 1000px;
  background-color: #D3D3D3;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  -webkit-transition: background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms, opacity 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms, opacity 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  height: 0.75rem;
  width: 2rem;
  background-color: #D3D3D3;
}

.c1:after {
  display: block;
  position: absolute;
  box-sizing: border-box;
  content: '';
  -webkit-transition: -webkit-transform 280ms cubic-bezier(0.4,0,0.2,1) 0ms, background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: transform 280ms cubic-bezier(0.4,0,0.2,1) 0ms, background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: transform 280ms cubic-bezier(0.4,0,0.2,1) 0ms, background-color 280ms cubic-bezier(0.4,0,0.2,1) 0ms;
  top: 50%;
  width: 1.125rem;
  height: 1.125rem;
  border-radius: 1000px;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  -webkit-transform: translate( 0, -50% );
  -ms-transform: translate( 0, -50% );
  transform: translate( 0, -50% );
  background-color: #808080;
}

<label
  className="anchor-toggle c0"
  disabled={true}
  height="1.375rem"
>
  <span
    className="c1"
    disabled={true}
    height="1.375rem"
  />
  <input
    className="c2"
    disabled={true}
    type="checkbox"
  />
  OFF
</label>
`;
